# rpa-udbetaling-af-egenbefordring

./: .pylintrc  main.py  pyproject.toml
.github/workflows/: lint.yml
helpers/: ats_functions.py  config.py  helper_functions.py  outlay_ticket_creation copy.py  outlay_ticket_creation.py  ticket_creation_helpers.py
processes/: error_handling.py  finalize_process.py  process_item.py  queue_handler.py
